# genei-phenie

./: main.py  package-lock.json  pyproject.toml  requirements.txt
data/: dataset  sample
frontend/public/data/: sample
frontend/src/: App.css  App.jsx
frontend/src/components/CutSimulation/: index.jsx
frontend/src/components/DoubleHelix/: index.jsx  styles.css
frontend/src/components/GenomeChat/: index.jsx  styles.css
frontend/src/components/GenotypePhenotypeList/: index.jsx  styles.css
frontend/src/components/SlidingGenes/: index.jsx
models/: __init__.py  biological_gpt.py
templates/: index.html
