[project]
name = "crispr-improvements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.2",
    "python-multipart>=0.0.20",
    "torch>=2.8.0",
    "uvicorn>=0.35.0",
]
